feat: updated the error structure to match the new behaviour (#242)
* feat: updated the error structure to match the new behaviour
- New error structure that includes status, message, template and data (recursive error)

* feat: exported pg error so consumers can reuse the helper

* refactor: cleanup err and httpstatuscode in response pkg since are no longer required
